--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/honey"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +18,14 @@
         </activity>
 
         <!-- home主界面 -->
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".MainActivity"/>
         <!-- 用户注册界面 -->
-        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".RegisterActivity" />
+        <!-- 忘记密码页面 -->
+        <activity android:name=".ForgetPwsActivity"/>
 
 
     </application>
-
+    <!--网络权限-->
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
