fix(master):添加分享按钮的点击事件功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".activity.ForgetPwsActivity"/>
         <!--检测网络信号的强弱页面-->
         <activity android:name=".activity.NetWorkActivity"/>
+        <!--FragmentActivity 联系操作-->
+        <activity android:name=".activity.TestFragmentActivity"/>
 
 
     </application>
